Adding dependency and file path

--- a/Departments.Api/Departments.Api.csproj
+++ b/Departments.Api/Departments.Api.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Departments.BusinessLayer\Departments.BusinessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
+
 </Project>
