--- a/Departments.Api/appsettings.json
+++ b/Departments.Api/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DepartmentFile": {
+  "DepartmentFiles": {
     "Path": "./Files"
   },
   "AllowedHosts": "*"
