--- a/Department.Tests/Departments.Tests.csproj
+++ b/Department.Tests/Departments.Tests.csproj
@@ -9,9 +9,16 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Departments.Api\Departments.Api.csproj" />
+    <ProjectReference Include="..\Departments.BusinessLayer\Departments.BusinessLayer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
