--- a/Departments.BusinessLayer/Departments.BusinessLayer.csproj
+++ b/Departments.BusinessLayer/Departments.BusinessLayer.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IO.Abstractions" Version="22.0.16" />
+  </ItemGroup>
+
 </Project>
